changes in commands

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,4 @@ services:
       - VAULT_CACERT=/etc/vault.d/root.crt
     cap_add:
       - IPC_LOCK
-    command: bash -c "sleep 10 && unseal_vault"
+    command: /usr/local/bin/vault server -config /etc/vault.d/vault.hcl
