--- a/non-cert/docker-compose.yml
+++ b/non-cert/docker-compose.yml
@@ -12,4 +12,4 @@ services:
       - VAULT_CACERT=/etc/vault.d/root.crt
     cap_add:
       - IPC_LOCK
-    command: vault server
+    command: vault server -config /etc/vault.d/vault.hcl
