--- a/non-cert/docker-compose.yml
+++ b/non-cert/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 8200:8200
       - 8201:8201
     environment:
-      - VAULT_ADDR=https://0.0.0.0:8200
+      - VAULT_ADDR=http://0.0.0.0:8200
     cap_add:
       - IPC_LOCK
     command: vault server -config /etc/vault.d/vault.hcl
